# nts-feed

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  diagnose_shows.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.sh  trimmer.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/nginx/: default.conf
docs/: DISCOVER.md  api.md  architecture.md  extension-points.md  frontend-architecture.md  installation.md
nts_feed/: __init__.py  app.py  downloader.py  runtime_paths.py  scrape.py  services_init.py  settings.py  track_manager.py  trimmer.py  validation.py
nts_feed/blueprints/: api_admin.py  api_db.py  api_discover.py  api_likes.py  api_listening.py  api_mixtape.py  api_search_unified.py  api_tracks.py  downloads.py  helpers.py  pages.py  search.py  shows_mgmt.py  thumbs.py  updates.py
nts_feed/cli/: __init__.py  backfill_auto_downloads.py  backfill_tracklists.py  build_database.py  recover_shows.py
nts_feed/db/: __init__.py  bootstrap.py  engines.py  ingest.py  models.py
nts_feed/ext/: tasks.py
scripts/: bootstrap-runtime.sh  check-docker.sh  check-env.sh
templates/: _episode_list_item.html  admin.html  base.html  base_partial.html  index.html  likes.html  mixtape.html  search.html  show.html  shows.html  stats.html
tests/: __init__.py  test_admin.py  test_api_tracks.py  test_app.py  test_backend_runtime_refactor.py  test_cli_commands.py  test_discover.py  test_docker_check.py  test_docker_server_mode.py  test_install_scripts.py  test_listening.py  test_makefile_targets.py  test_next_up.py  test_pages.py  test_runtime_paths.py  test_search.py  test_security.py  test_settings.py  test_show_episodes_api.py  test_stats.py  test_storage_layout_contract.py  test_storage_paths.py  test_subscribe_flow.py  test_track_manager.py  test_youtube_service.py
(+71 files in other folders)
