[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nts-feed"
version = "0.1.0"
description = "A self-hosted web app for tracking, downloading, and exploring NTS Radio shows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "avxe", email = "avxe@pm.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "flask~=2.3.0",
  "flask-talisman~=1.1.0",
  "gunicorn~=23.0.0",
  "watchdog~=4.0.0",
  "requests~=2.32.0",
  "beautifulsoup4~=4.12.0",
  "yt-dlp~=2024.8.0",
  "mutagen~=1.47.0",
  "ffmpeg-python~=0.2.0",
  "music-tag~=0.4.3",
  "Pillow~=10.0.0",
  "google-api-python-client==2.107.0",
  "google-auth-httplib2==0.1.1",
  "google-auth-oauthlib==1.1.0",
  "SQLAlchemy~=2.0.0",
  "python-dotenv~=1.0.0",
  "cssutils~=2.9.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest~=8.0",
  "pytest-cov~=5.0",
  "ruff~=0.8.0",
  "pre-commit>=3.7,<5",
]

[project.scripts]
nts-feed = "nts_feed.app:main"
build-database = "nts_feed.cli.build_database:main"
backfill-tracklists = "nts_feed.cli.backfill_tracklists:main"
backfill-auto-downloads = "nts_feed.cli.backfill_auto_downloads:main"
recover-shows = "nts_feed.cli.recover_shows:main"

[project.urls]
Homepage = "https://github.com/avxe/nts-feed"
Repository = "https://github.com/avxe/nts-feed"
Issues = "https://github.com/avxe/nts-feed/issues"

[tool.setuptools.packages.find]
include = ["nts_feed*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
